@@ -1,6 +1,7 @@
 ﻿0.9.2
 . BusinessObjects
 .. Merge generated and custom classes
+.. BaseEntity class
 .. Clean up + finetuning
 
 0.9.1
